[tool.poetry]
name = "dashboard"
version = "0.1.0"
description = ""
authors = ["Floskinner <58706771+Floskinner@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.2"
pydantic = "^1.8.2"
httpx = "^0.19.0"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
pylint = "^2.11.1"
pytest = "^6.2.5"
pytest-mock = "^3.6.1"
pytest-httpx = "^0.13.0"
pytest-asyncio = "^0.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
